# cargo-consolidate

./: Cargo.toml  README.md
src/: dependencies.rs  main.rs
